<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_one" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_one"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item_two"
            android:title="@string/item_2" />
    </group>

    <group android:id="@+id/group_two" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_three"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item_four"
            android:title="@string/item_4" />
        <item
            android:id="@+id/nav_item_five"
            android:title="@string/item_5" />
    </group>
</menu>
