<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:background="@color/nyanza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/tea"
        android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize">

        <EditText
            android:id="@+id/editTextNameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/ash" />

        <EditText
            android:id="@+id/editTextPhoneCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/ash" />

        <EditText
            android:id="@+id/editTextEmailCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/ash" />

        <EditText
            android:id="@+id/editTextBirthdayCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cumplea_os"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/ash" />

        <Button
            android:id="@+id/buttonCreateContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_contacto"
            android:textColor="@color/white"
            android:backgroundTint="@color/brown"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
