<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewDetalles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/nyanza"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/llDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/tea">

        <TextView
            android:id="@+id/textViewDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre2"
            android:textStyle="bold"
            android:textColor="@color/brown"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewDetailPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel_fono2"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewDetailEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewDetailBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cumplea_os2"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</ScrollView>
